--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lmachens/playground#readme",
   "devDependencies": {
     "css-loader": "^4.2.0",
+    "file-loader": "^6.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
